# Wolly

./: README.md  pyproject.toml  requirements.txt
artifacts/: emote_policy.txt  emotion_tasks_ranges.json  emotion_tasks_report.json  eval_report.json  known_faces.txt
docs/: robot_eyes_screens.md
emotion_src/: README_PI.md  requirements-pi.txt  run_on_pi.py  setup_pi.sh
emotion_src/affect_pi/: DE_nodes.py  camera.py  detectors.py  face_identity.py  features.py  geometry.py  live_tasks_demo.py  main.py  pipeline.py  train_emotion_tasks.py  train_yolo_face.py  trend.py
emotion_src/robot_eyes/: __init__.py  backends.py  config.py  st7789.py
runs/face_dataset/: data.yaml  train.txt  val.txt
scripts/: face_enroll.py  live_emotion_eyes.py  mdistortion_live_yolo_face.py  measure_ram.py  retrain_on_pc.py
src/affect_pi/: DFO_image.py  clusters.py  eval_emotion_tasks.py  mdistortion_tasks.py  memtools.py  model.py  status.py  train_mdistortion_de.py
src/affect_pi_base.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/robot_eyes/: README.md  behavior.py  controller.py  main.py  (+2 more)
tests/: conftest.py  test_behavior.py  test_camera.py  test_clusters.py  test_controller.py  test_display_helpers.py  test_eval_tasks.py  test_face_identity.py  test_features.py  test_geometry.py  test_live_app.py  test_live_demo.py  test_mdistortion_de.py  test_mdistortion_tasks.py  test_memtools.py  test_model.py  test_optimizers.py  test_pipeline.py  test_renderer.py  test_spi_backend.py  test_trend.py  test_vectorization.py  test_yolo_dataset.py
