[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affect-pi-base"
version = "0.1.0"
description = "Camera-to-face-landmark feature pipeline for laptop webcam testing and Raspberry Pi deployment."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "mediapipe>=0.10.9",
  "joblib>=1.3",
  "ultralytics>=8.3",
  "scikit-learn>=1.4",
  "psutil>=5.9",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
sim = ["pygame>=2.5"]
pi = ["picamera2>=0.3.18", "spidev>=3.6", "gpiozero>=2.0", "lgpio>=0.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
affect-pi = "affect_pi.main:main"
affect-pi-live = "affect_pi.live_tasks_demo:main"
affect-pi-train = "affect_pi.train_mdistortion_de:main"
affect-pi-train-yolo = "affect_pi.train_yolo_face:main"
affect-pi-train-emotion = "affect_pi.train_emotion_tasks:main"
affect-pi-eval-emotion = "affect_pi.eval_emotion_tasks:main"
affect-pi-eyes = "robot_eyes.main:main"

[tool.setuptools.packages.find]
where = ["src"]
